--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
 *{
     margin: 1px;
     padding: 0px;
+    font-family: "Fira Sans" serif;
    
 }
 
@@ -103,6 +106,11 @@ button:hover {
 }
 
 /* the_Vision_of_Future */
+.vision_heading{
+    font-weight: bold;
+    font-size: 2rem;
+    color: #000;
+}
 .the_Vision_of_Future{
     margin:20px 160px;
 
@@ -147,7 +155,7 @@ button:hover {
     pading:24px 24px;
     margin: 10px 0;
     background-color: #c6e4d6;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px  #c6e4d6;
 }
 
 .Vision_of_Future_modern{
@@ -159,8 +167,8 @@ button:hover {
     border-radius: 10px;
     pading:24px 24px;
     margin: 10px 0;
-    background-color: #FFC239;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: #f7ebcf;
+    box-shadow: 0 2px 4px #f7ebcf;
 }
     
 .digital_heading,
@@ -175,24 +183,24 @@ button {
     margin-top: 10px;
     padding: 10px 20px;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
     font-weight: bold;
     cursor: pointer;
-    color: white;
+    color: #fff;
 }
 
 .digital_btns {
-    background-color: #003D99;
+    background-color: #5490f5;
     margin-bottom: 32px;
 }
 
 .green_btns {
-    background-color: #006A50;
+    background-color: #09a15c;
     margin-bottom: 32px;
 }
 
 .modern_btns {
-    background-color: #E89E00;
+    background-color:#ffc239;
     margin-bottom: 32px;
     color: white;
 }
