--- a/style.css
+++ b/style.css
@@ -212,3 +212,30 @@ button {
 .digital_p{
     margin-bottom: 30px;
 }
+
+/*add special part */
+
+.special_task_part_Dr_Youmus {
+    padding: 48px 24px;
+    margin:20px 160px;
+    background-image: url(./B11A1--assignment-1/assets/quote-bg.png);
+    background-repeat: no-repeat;
+    background-position: 25px 20px;
+    border-radius: 13px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+  }
+
+  .sp{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: rgba(14, 14, 14, 0.7);
+    margin-bottom: 5px;
+  }
+  .dYunus {
+    margin-top: 24px;
+    margin-bottom: 5px;
+    color: rgba(14, 14, 14, 0.8);
+    font-size: 20px;
+    font-weight: 700;
+  }
