--- a/style.css
+++ b/style.css
@@ -239,3 +239,166 @@ button {
     font-size: 20px;
     font-weight: 700;
   }
+
+  /* recent news part */
+
+  .Recent_News{
+    margin:20px 160px;
+    padding: 20px 0;
+  }
+  
+  .Recent_News h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #0E0E0E;
+    
+}
+
+.Recent_News p {
+    font-size: 1rem;
+    color: #555;
+    line-height: 1.6;
+    margin-bottom: 30px;
+}
+.recent_news_box_container {
+    display: flex;
+    gap: 32px; 
+    border-radius: 10px;
+    background-color: #FFF; 
+    padding: 48px 48px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+}
+
+#news-box-img-id{
+    width: 100%;
+    max-width: 402px; 
+    height: auto;
+    border-radius: 24px;
+}
+
+.news-box1-written h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #0E0E0E;
+    margin-bottom: 10px;
+}
+
+.news-box1-written img {
+    width: 100px;
+    margin-bottom: 10px;
+    border-radius: 5px; 
+}
+
+.news-box1-written p {
+    font-size: 1rem;
+    color: #555;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+
+.read-btn {
+    align-self: flex-start;
+    background-color: #006A50;
+    color: white;
+    padding: 13px 26px;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.recent_news_box2_container{
+    display: flex;
+    margin-top: 24px;
+    gap:32px;
+    padding: 48px 48px;
+    background-color: #FFFF;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+
+}
+
+/*donate part */
+
+.donate_today{
+    text-align: center;
+    margin:20px 160px;
+  }
+
+#donate-heading-id{
+    color: #0e0e0e;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+#donate-paragraph {
+    line-height: 24px;
+    color: rgba(14, 14, 14, 0.7);
+    font-size: 18px;
+    font-weight: 400;
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .ammount-box-container {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    margin: 32px auto;
+  }
+
+  .ammount-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 16px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    background: #fff;
+    height: 128px;
+    width: 240px;
+    color: rgba(14, 14, 14, 0.8);
+    font-family: "Fira Sans";
+    font-size: 40px;
+    font-weight: 700;
+  }
+
+  .ammount-box:hover {
+    background-color: #c6e4d6;
+    transition: 0.3s ease-in-out;
+  }
+
+input[type="number"]{
+    text-align: center;
+    height: 64px;
+    background-color: #FFF;
+    display: block;
+    width: 900px;
+    padding: 20px 40px;
+    margin: 32px auto;
+    border: none;
+    font-size: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    
+}
+
+input[type="number"]:focus{
+    outline: none;
+    background-color: #def4e9;
+}
+
+
+
+.donate-btn {
+    margin-top: 32px;
+    color: #fff;
+    background-color: #006a50;
+    font-size: 22px;
+    font-weight: 500;
+    padding: 17px 34px;
+    border-radius: 8px;
+    display: block;
+    margin: auto;
+  }
