--- a/style.css
+++ b/style.css
@@ -364,7 +364,9 @@ button {
     font-size: 40px;
     font-weight: 700;
   }
-
+#ammount200tk{
+    background-color: #c6e4d6;
+}
   .ammount-box:hover {
     background-color: #c6e4d6;
     transition: 0.3s ease-in-out;
@@ -401,4 +403,87 @@ input[type="number"]:focus{
     border-radius: 8px;
     display: block;
     margin: auto;
+  }
+
+
+  /* subscribe newsletter part */
+  
+  .Subscribe-Newsletter{
+    margin:20px 160px;
+    text-align: center;
+    padding: 80px 100px;
+    background-color: #fff;
+    border-radius: 24px;
+    background: #c6e4d6;
+  }
+
+  #subscribe-heading-id{
+    color: #0e0e0e;
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 24px;
+  }
+
+  .subscribe-p{
+    line-height: 24px;
+    color: rgba(14, 14, 14, 0.7);
+    font-size: 16px;
+    font-weight: 400;
+    width: 60%;
+    margin: 0px auto 10px;
+  }
+
+  .input-container > input{
+    font-size: 20px;
+    border: none;
+    border-radius: 8px 0 0 8px;
+    width: 60%;
+    padding: 18px 40px;
+    margin: 24px -5px;  
+  }
+  .input-container input {
+    font-size: 16px;
+  }
+  .input-container > input:focus {
+    outline: none;
+    background-color: #fff;
+    transition: 0.3s;
+  }
+  .subscribe-btn {
+    color: #fff;
+    background-color: #006a50;
+    font-size: 19px;
+    font-weight: 500;
+    padding: 15px 40px;
+    border-radius: 0 8px 8px 0;
+    margin-left: o;
+  }
+
+  /* footer part */
+  .footer{
+    background-color: #FFFFFF;
+    padding: 50px;
+    border-radius: 40px 40px 0 0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  #footer-heading{
+    text-align: center;
+    color: #0E0E0E;
+    font-size: 32px;
+    font-weight: 700;
+    margin: 40px;
+  }
+  .social-media {
+    margin: 40px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+  }
+  
+  hr {
+    width: 70%;
+    border: 1px solid rgba(14, 14, 14, 0.1);
+    margin: 0px auto;
   }
