--- a/style.css
+++ b/style.css
@@ -243,6 +243,79 @@ button {
     font-weight: 700;
   }
 
+
+
+  /* start optional part opinion part */ 
+
+.opinion-section {
+    margin: 20px 160px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.opinion-heading {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #0E0E0E;
+}
+
+
+.opinion-table {
+    width: 100%;
+    border-collapse: collapse;
+    text-align: left;
+    margin: 0 auto;
+
+}
+
+.table-header {
+    display: flex;
+    background-color: #c6e4d6;
+    font-weight: bold;
+    padding: 10px;
+    border: 1px solid #ddd;
+}
+
+.table-row {
+    display: flex;
+    border: 1px solid #ddd;
+}
+
+.table-cell {
+    flex: 1;
+    padding: 10px;
+    font-size: 16px;
+    color: #0E0E0E;
+}
+
+.table-cell:nth-child(2) {
+    text-align: right;
+}
+
+
+.opinion-select {
+    padding: 10px 15px;
+    font-size: 16px;
+    border: 1px solid rgba(14, 14, 14, 0.2);
+    border-radius: 8px;
+    background-color: #fff;
+    cursor: pointer;
+    width: 150px;
+}
+
+.opinion-select:hover {
+    border-color: #006A50;
+}
+
+.opinion-select:focus {
+    outline: none;
+    border-color: #006A50;
+}
+
+
   /* recent news part */
 
   .Recent_News{
