--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 *{
     margin: 1px;
@@ -21,6 +20,10 @@ button:hover {
     margin:20px 160px;
 }
 
+body{
+    background-color: #f5f5f5;
+    font-family: "Fira Sans", serif;
+}
 .heading{
     color: #0E0E0E;
 }
@@ -137,12 +140,12 @@ button:hover {
 
 .Vision_of_Future_digital{
     text-align: justify;
-    width: 410.67px;
-    height: 325px;
-    padding: 20px;
+  /*  width: 410.67px;
+    height: 325px;*/
+   /* padding: 20px; */
    
     border-radius: 10px;
-    pading:24px 24px;
+    padding:24px 24px;
     margin: 10px 0;
     background-color: rgba(84, 144, 245, 0.2);
     box-shadow: 0 2px 4px rgba(84, 144, 245, 0.2);
@@ -150,12 +153,12 @@ button:hover {
 
 .Vision_of_Future_green{
     text-align: justify;
-    width: 410.67px;
+  /*  width: 410.67px;
     height: 325px;
     padding: 20px;
-   
+   */
     border-radius: 10px;
-    pading:24px 24px;
+    padding:24px 24px;
     margin: 10px 0;
     background-color: #c6e4d6;
     box-shadow: 0 2px 4px  #c6e4d6;
@@ -163,12 +166,12 @@ button:hover {
 
 .Vision_of_Future_modern{
     text-align: justify;
-    width: 410.67px;
+   /* width: 410.67px;
     height: 325px;
     padding: 20px;
-   
+   */
     border-radius: 10px;
-    pading:24px 24px;
+    padding:24px 24px;
     margin: 10px 0;
     background-color: #f7ebcf;
     box-shadow: 0 2px 4px #f7ebcf;
@@ -194,17 +197,17 @@ button {
 
 .digital_btns {
     background-color: #5490f5;
-    margin-bottom: 32px;
+    
 }
 
 .green_btns {
     background-color: #09a15c;
-    margin-bottom: 32px;
+    
 }
 
 .modern_btns {
     background-color:#ffc239;
-    margin-bottom: 32px;
+    
     color: white;
 }
 
@@ -212,15 +215,14 @@ button {
     margin-top: 10px;
     margin-bottom: 20px;
 }
-.digital_p{
-    margin-bottom: 30px;
-}
+
 
 /*add special part */
 
-.special_task_part_Dr_Youmus {
+.quata_d {
     padding: 48px 24px;
-    margin:20px 160px;
+    margin:40px 160px;
+    background-color: white;
     background-image: url(./B11A1--assignment-1/assets/quote-bg.png);
     background-repeat: no-repeat;
     background-position: 25px 20px;
@@ -347,10 +349,11 @@ button {
 }
 
 #news-box-img-id{
-    width: 100%;
-    max-width: 402px; 
-    height: auto;
+    
+    width: 350px; 
+    height: 280px;
     border-radius: 24px;
+    
 }
 
 
